--- a/openCVLibrary/build.gradle
+++ b/openCVLibrary/build.gradle
@@ -131,6 +131,10 @@ android {
         targetCompatibility JavaVersion.VERSION_17
     }
 
+    kotlinOptions {
+        jvmTarget = "17"
+    }
+
     buildTypes {
         debug {
             packagingOptions {
